--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 .grid-container {
     display: grid;
-    /*grid-template-rows: repeat(1, 200px);*/
     grid-template-columns: repeat(53, 16px);
     /*border: 1px solid green;*/
 }
 
 .grid-item {
     background-color: #eee;
-    /*border: 1px solid rgba(0, 0, 0, 0.8);*/
     border-radius: 2px;
     min-width: 10px;
     min-height: 10px;
@@ -15,13 +13,12 @@
     max-height: 10px;
     border: 1px solid #ddd;
     margin-bottom: 4px;
-    /*padding: 20px;*/
-    /*font-size: 30px;*/
-    /*text-align: center;*/
 }
 
 .grid-item:hover {
     background-color: darkseagreen;
+    border: 1px solid darkseagreen;
+    border-radius: 2px;
     cursor: pointer;
 }
 
@@ -29,7 +26,10 @@
     display: grid;
     grid-template-rows: repeat(7, 11px);
     grid-template-columns: repeat(1, 11px);
-    /*background-color: #ddd;*/
-    /*grid-gap: 4px;*/
-    /*padding: 10px;*/
+}
+
+.now {
+    background-color: #aaa;
+    border: 1px solid #aaa;
+    border-radius: 2px;
 }
