--- a/style.css
+++ b/style.css
@@ -1,24 +1,46 @@
+.container {
+    display: inline-flex;
+    flex-direction: row;
+    border: solid 1px #ccc;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.week-days {
+    margin: 7px;
+    display: inline-grid;
+    grid-template-columns: repeat(1, 30px);
+}
+
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(53, 16px);
-    /*border: 1px solid green;*/
+    display: inline-grid;
+    padding: 8px 4px 4px 8px;
+    grid-template-columns: repeat(53, 17px);
 }
 
 .grid-item {
     background-color: #eee;
-    border-radius: 2px;
+    border-radius: 3px;
     min-width: 10px;
     min-height: 10px;
     max-width: 10px;
     max-height: 10px;
-    border: 1px solid #ddd;
-    margin-bottom: 4px;
+    border: 1px solid #ccc;
+    margin-bottom: 5px;
+}
+
+.grid-week-text {
+    min-height: 12px;
+    max-height: 12px;
+    font-size: 13px;
+    font-family: sans-serif;
+    grid-auto-flow: row;
 }
 
 .grid-item:hover {
     background-color: darkseagreen;
     border: 1px solid darkseagreen;
-    border-radius: 2px;
+    border-radius: 3px;
     cursor: pointer;
 }
 
@@ -26,10 +48,11 @@
     display: grid;
     grid-template-rows: repeat(7, 11px);
     grid-template-columns: repeat(1, 11px);
+
 }
 
 .now {
     background-color: #aaa;
     border: 1px solid #aaa;
-    border-radius: 2px;
+    border-radius: 3px;
 }
