--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .container {
     display: inline-flex;
     flex-direction: row;
