Add months to the layout

--- a/style.css
+++ b/style.css
@@ -5,12 +5,32 @@ body {
     height: 100vh;
 }
 
-.container {
-    display: inline-flex;
-    flex-direction: row;
+.container-outside {
     border: solid 1px #ccc;
     border-radius: 10px;
     padding: 20px;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+.month-container {
+    margin-left: 50px;
+    margin-right: 20px;
+    display: grid;
+    grid-template-columns: repeat(12, auto);
+    height: 20px;
+    margin-bottom: 2px;
+}
+
+.month {
+    text-align: right;
+    font-size: 13px;
+    font-family: sans-serif;
+}
+
+.container-inside {
+    display: inline-flex;
+    flex-direction: row;
 }
 
 .week-days {
